--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Jumbotron -->
 
     <section class="jumbotron text-center">
-      <img src="f1.jpeg" alt="Aurel Messi" width="200" class="rounded-circle img-thumbnail" />
+      <img src="f1.jpeg.jpg" alt="Aurel Messi" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Marshell Tri Susanto</h1>
       <p class="lead">Student </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
